--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -5,4 +5,15 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ukjamez.locationbasedgame.GameMapActivity" />
+    tools:context="ukjamez.locationbasedgame.GameMapActivity"
+    tools:layout="@layout/activity_game_map">
+<Button
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_gravity="right|top"
+android:text="Place Pylon"
+android:padding="12dp"
+android:layout_marginTop="7dp"
+android:layout_marginEnd="7dp"/>
+
+    </fragment>
