--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -8,12 +8,13 @@
     tools:context="ukjamez.locationbasedgame.GameMapActivity"
     tools:layout="@layout/activity_game_map">
 <Button
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_gravity="right|top"
-android:text="Place Pylon"
-android:padding="12dp"
-android:layout_marginTop="7dp"
-android:layout_marginEnd="7dp"/>
+    android:id="@+id/buttonP"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right|top"
+    android:text="Place Pylon"
+    android:padding="12dp"
+    android:layout_marginTop="7dp"
+    android:layout_marginEnd="7dp"/>
 
     </fragment>
