pylon count added + air drop timer refreshes

--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -16,5 +16,15 @@
     android:padding="12dp"
     android:layout_marginTop="7dp"
     android:layout_marginEnd="7dp"/>
+<TextView
+    android:id="@+id/textP"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right|top"
+    android:text="[p]"
+    android:padding="12dp"
+    android:layout_marginTop="9dp"
+    android:layout_marginEnd="120dp"
+    />
 
     </fragment>
