--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -26,5 +26,14 @@
     android:layout_marginTop="9dp"
     android:layout_marginEnd="120dp"
     />
-
+    <TextView
+        android:id="@+id/textTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|bottom"
+        android:text="test"
+        android:padding="12dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginEnd="9dp"
+        />
     </fragment>
