--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -1,3 +1,8 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -26,14 +31,16 @@
     android:layout_marginTop="9dp"
     android:layout_marginEnd="120dp"
     />
-    <TextView
-        android:id="@+id/textTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"
-        android:text="test"
-        android:padding="12dp"
-        android:layout_marginBottom="9dp"
-        android:layout_marginEnd="9dp"
-        />
-    </fragment>
+<TextView
+    android:id="@+id/textTest"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right|bottom"
+    android:text="test"
+    android:padding="12dp"
+    android:layout_marginBottom="9dp"
+    android:layout_marginEnd="9dp"
+    />
+</fragment>
+
+</LinearLayout>
