All animal markers added plus collection and UI count

--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -95,6 +95,35 @@
         android:layout_marginTop="38dp"
         android:layout_marginEnd="7dp"
         />
+
+    <TextView
+        android:id="@+id/textT1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:text="0"
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="65dp"
+        />
+    <TextView
+    android:id="@+id/textT2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right|top"
+    android:text="0"
+    android:layout_marginEnd="30dp"
+    android:layout_marginTop="65dp"
+    />
+    <TextView
+    android:id="@+id/textT3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right|top"
+    android:text="0"
+    android:layout_marginEnd="10dp"
+    android:layout_marginTop="65dp"
+    />
+
 </fragment>
 
 </FrameLayout>
