--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -32,77 +32,24 @@
             android:layout_margin="16dp"
             android:src="@mipmap/ic_flash_on_white_18dp" />
 
-        <TextView
-            android:id="@+id/textP"
+
+        <ImageView
+            android:id="@+id/bgImage1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
-            android:layout_marginBottom="9dp"
-            android:layout_marginEnd="120dp"
-            android:padding="12dp"
-            android:text="N/A" />
-
-        <ProgressBar
-            android:id="@+id/progressRun"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
-            android:layout_marginTop="3dp"
-            android:max="500" />
-
-        <TextView
-            android:id="@+id/textRun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
-            android:layout_marginEnd="7dp"
-            android:layout_marginTop="0dp"
-            android:text="0" />
-
-        <ProgressBar
-            android:id="@+id/progressWalk"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
-            android:layout_marginTop="22dp"
-            android:max="500" />
-
-        <TextView
-            android:id="@+id/textWalk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
-            android:layout_marginEnd="7dp"
-            android:layout_marginTop="19dp"
-            android:text="0" />
-
-        <ProgressBar
-            android:id="@+id/progressBoth"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
-            android:layout_marginTop="41dp"
-            android:max="2500" />
-
-        <TextView
-            android:id="@+id/textT1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
-            android:layout_marginEnd="50dp"
-            android:layout_marginTop="65dp"
-            android:text="0" />
+            android:layout_gravity="top|right"
+            android:layout_marginRight="320dp"
+            android:layout_marginTop="2dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/alltiers" />
 
         <TextView
             android:id="@+id/textT2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|top"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginRight="330dp"
+            android:layout_marginTop="22dp"
             android:text="0" />
 
         <TextView
@@ -110,8 +57,82 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|top"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginRight="330dp"
+            android:layout_marginTop="41dp"
+            android:text="0" />
+
+        <TextView
+            android:id="@+id/textP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="54dp"
+            android:padding="12dp"
+            android:text="N/A" />
+
+        <ProgressBar
+            android:id="@+id/progressBoth"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="278dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:layout_marginTop="3dp"
+            android:max="500" />
+
+        <ProgressBar
+            android:id="@+id/progressWalk"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="278dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:layout_marginTop="22dp"
+            android:max="500"
+            android:progress="300"/>
+
+        <ProgressBar
+            android:id="@+id/progressRun"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="278dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:layout_marginTop="41dp"
+            android:max="2500" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:layout_marginEnd="295dp"
+            android:layout_marginTop="3dp"
+            android:text="∞" />
+
+        <TextView
+            android:id="@+id/textWalk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:layout_marginEnd="295dp"
+            android:layout_marginTop="22dp"
+            android:text="0" />
+
+
+        <TextView
+            android:id="@+id/textRun"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:layout_marginRight="295dp"
+            android:layout_marginTop="41dp"
+            android:text="0" />
+
+        <TextView
+            android:id="@+id/textT1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:layout_marginRight="330dp"
+            android:layout_marginTop="3dp"
             android:text="0" />
 
     </fragment>
