--- a/app/src/main/res/layout/fragment_game_ui.xml
+++ b/app/src/main/res/layout/fragment_game_ui.xml
@@ -5,130 +5,144 @@
     android:layout_height="match_parent"
     tools:context="ukjamez.locationbasedgame.GameUI">
 
-
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/buttonP"
+        android:id="@+id/buttonD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="86dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:src="@mipmap/ic_airplanemode_active_white_18dp" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/buttonD"
+        android:id="@+id/buttonP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:src="@mipmap/ic_flash_on_white_18dp" />
-
-
-    <ImageView
-        android:id="@+id/bgImage1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:layout_marginRight="320dp"
-        android:layout_marginTop="2dp"
-        android:adjustViewBounds="true"
-        app:srcCompat="@drawable/alltiers" />
-
-    <TextView
-        android:id="@+id/textT2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginRight="330dp"
-        android:layout_marginTop="22dp"
-        android:text="0" />
-
-    <TextView
-        android:id="@+id/textT3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginRight="330dp"
-        android:layout_marginTop="41dp"
-        android:text="0" />
 
     <TextView
         android:id="@+id/textP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="54dp"
-        android:padding="12dp"
-        android:text="N/A" />
-
-    <ProgressBar
-        android:id="@+id/progressBoth"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="278dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginTop="3dp"
-        android:max="500" />
-
-    <ProgressBar
-        android:id="@+id/progressWalk"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="278dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginTop="22dp"
-        android:max="500"
-        android:progress="300"/>
-
-    <ProgressBar
-        android:id="@+id/progressRun"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="278dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginTop="41dp"
-        android:max="2500" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginEnd="295dp"
-        android:layout_marginTop="3dp"
-        android:text="∞" />
-
-    <TextView
-        android:id="@+id/textWalk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginEnd="295dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="72dp"
+        android:background="@color/colorAccent"
+        android:padding="2dp"
         android:text="0" />
 
 
-    <TextView
-        android:id="@+id/textRun"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginRight="295dp"
-        android:layout_marginTop="41dp"
-        android:text="0" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textT1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:layout_marginRight="330dp"
-        android:layout_marginTop="3dp"
-        android:text="0" />
 
+        <ImageView
+            android:id="@+id/bgImage1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="top|right"
+            android:adjustViewBounds="true"
+            android:background="@drawable/alltiers" />
+
+        <TextView
+            android:id="@+id/textT1"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="right|top"
+            android:layout_marginEnd="8dp"
+            android:text="0" />
+
+        <TextView
+            android:id="@+id/textT2"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_above="@+id/textRun"
+            android:layout_alignStart="@+id/textT1"
+            android:layout_gravity="right|top"
+            android:text="0" />
+
+        <TextView
+            android:id="@+id/textT3"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_alignStart="@+id/textT2"
+            android:layout_below="@+id/textT2"
+            android:layout_gravity="right|top"
+            android:text="0" />
+
+        <ProgressBar
+            android:id="@+id/progressBoth"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textWalk"
+            android:layout_gravity="right|top"
+            android:layout_toStartOf="@+id/textView"
+            android:max="500" />
+
+        <ProgressBar
+            android:id="@+id/progressWalk"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textRun"
+            android:layout_gravity="right|top"
+            android:layout_toStartOf="@+id/textWalk"
+            android:max="500" />
+
+        <ProgressBar
+            android:id="@+id/progressRun"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textRun"
+            android:layout_gravity="right|top"
+            android:layout_toStartOf="@+id/textRun"
+            android:max="2500" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="26dp"
+            android:layout_height="18dp"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="right|top"
+            android:layout_toStartOf="@+id/bgImage1"
+            android:background="#edce07"
+            android:text="∞"
+            android:textAlignment="center" />
+
+
+        <TextView
+            android:id="@+id/textWalk"
+            android:layout_width="26dp"
+            android:layout_height="19dp"
+            android:layout_below="@+id/textView"
+            android:layout_gravity="right|top"
+            android:layout_toStartOf="@+id/bgImage1"
+            android:background="#fc6e02"
+            android:text="0"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/textRun"
+            android:layout_width="26dp"
+            android:layout_height="19dp"
+            android:layout_below="@+id/textWalk"
+            android:layout_gravity="right|top"
+            android:layout_toEndOf="@+id/progressWalk"
+            android:background="#ed0000"
+            android:text="0"
+            android:textAlignment="center" />
+
+    </RelativeLayout>
 
 </FrameLayout>
